# adityassarode.codes

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
adityassarode_codes/: cli.py
adityassarode_codes/templates/: README.md
adityassarode_codes/templates/adityassarode.CDS/: README.md
adityassarode_codes/templates/adityassarode.CIOT/: README.md  t2.py
adityassarode_codes/templates/adityassarode.CJAVA/: README.md  hi.java
adityassarode_codes/templates/adityassarode.CML/: README.md  t3.py
