[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adityassarode.codes"
version = "1.0.1"
description = "CLI tool by Aditya Sarode for learning and practice"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Aditya Sarode" }
]
